09/network-policy/ns-a.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-a
  labels:
    client: "client-a"
