09/network-policy/ns-b.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-b
  labels:
    client: "client-b"
