09/network-policy/deny-from-other-namespaces.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: ns-a
  name: deny-traffic-to-ns-a-from-other-namespaces
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          client: "client-a"
